# Zoey

./: .env.example  .gitignore  Cargo.toml  README.md  main.rs.bak-deepseek-cohere  main.rs.bak-scrapper mistral-cohere-workperfect  monitor_performance.py  monitor_signals.py
agent-twitter-client/: Cargo.toml
common/: Cargo.toml
common/examples/: granite_embedding.rs  mistral_basic.rs  mistral_trading.rs  openrouter_example.rs
common/src/: character.rs  document_loader.rs  error.rs  lib.rs  storage.rs  traits.rs
common/src/exa/: client.rs  error.rs  mod.rs  types.rs
common/src/providers/: granite.rs  mistral.rs  mod.rs  openrouter.rs
config/: twitterBot.md  twitter_config.example.json  twitter_config.json
crypto-agents/: Cargo.toml
crypto-agents/config/: twitscrape.md
crypto-agents/examples/: coin_analysis.rs  crypto_search.rs  exa_market_search.rs  technical_analysis.rs  test_twitter.rs  topic_analysis_test.rs  topic_insights.rs  trading_chat.rs  trending_token_analysis.rs  trendtoken_analysis.rs  twitter_ollama.rs  twitter_user_extract.rs
crypto-agents/src/: lib.rs  main.rs  middleware.rs  models.rs  routes.rs  system.rs
crypto-agents/src/agents/: extractor.rs  fundamental.rs  mod.rs  new_top.rs  sentiment.rs  synopsis.rs  technical.rs  topic.rs
crypto-agents/src/api/: coingecko.rs  mod.rs  social_media.rs
documents/: Food_computing.txt
rig-core/examples/: agent_autonomous.rs  agent_orchestrator.rs  agent_prompt_chaining.rs  agent_with_loaders.rs
rig-core/src/providers/: deepseek.rs
rig-core/src/providers/gemini/: completion.rs  embedding.rs  mod.rs
trader-solana/: Cargo.toml
trader-solana/src/gmgn/: client.rs  types.rs
trader-solana/src/solana/: swap.rs
trader-solana/src/tools/: swap.rs  transfer.rs
zoey/: Cargo.toml
zoey-core/: Cargo.toml
zoey-core/src/: agent.rs  attention.rs  config.rs  intel.rs  interaction_history.rs  lib.rs
zoey-core/src/clients/: direct.rs  discord.rs  heuris.rs  telegram.rs  twitter.rs
zoey-core/src/knowledge/: store.rs
zoey-rag/: Cargo.toml
zoey/src/: main.rs
zoey/src/characters/: zoey.toml  zoey.toml.1  zoey.toml.2
