[workspace]
members = [
    "zoey",      # Agent Research with doc and web intelligence
    "common",    # Shared functionality
    "crypto-agents", # Coingecko Research agent intelligence
]
resolver = "2"

[workspace.dependencies]
rig-core = { path = "./rig-core", features = ["pdf", "derive"] }
rig-sqlite = { path = "./rig-sqlite" }