[workspace]
members = [
    "zoey",      # 
    "common",    # Shared functionality
    "crypto-agents", # Coingecko Research agent intelligence
    "zoey-core",  # zoeycore
    "trader-solana",  # trader-solana
    "zoey-rag" #agent research with doc and web intelligence
    
]

exclude = ["rig-onchain-kit"]

resolver = "2"

[workspace.dependencies]
rig-core = { path = "./rig-core", version = "0.8.0", features = ["pdf", "derive"] }
rig-sqlite = { path = "./rig-sqlite", version = "0.1.4" }
rig-onchain-kit = { path = "./rig-onchain-kit" }
tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.4"
futures = "0.3"
zeroize = "1.4.0"

[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "c14774464c4d38de553c6ef2f48a10982c1b4801"
