[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = { version = "0.7.0", features = ["pdf"] }
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
encoding_rs = "0.8"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
serde_json = "1.0"
dotenv = "0.15"

[[example]]
name = "mistral_basic"
path = "examples/mistral_basic.rs"

[[example]]
name = "mistral_trading"
path = "examples/mistral_trading.rs"

[[example]]
name = "granite_embedding"
path = "examples/granite_embedding.rs"