[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = { workspace = true }
rig-sqlite = { workspace = true }
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17"
async-trait = "0.1"
serde_json = "1.0"
dotenv = "0.15"
encoding_rs = "0.8"
thiserror = "1.0"
uuid = { version = "1.8.0", features = ["v4"] }


[[example]]
name = "mistral_basic"
path = "examples/mistral_basic.rs"

[[example]]
name = "mistral_trading"
path = "examples/mistral_trading.rs"

[[example]]
name = "granite_embedding"
path = "examples/granite_embedding.rs"