[package]
name = "crypto-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
csv = "1.3"
dotenv = "0.15"
thiserror = "1.0"

rig-core = { workspace = true }

twitter-v2 = "0.1.8"
agent-twitter-client = { path = "../agent-twitter-client" }

[[example]]
name = "technical_analysis"
path = "examples/technical_analysis.rs"