[package]
name = "zoey"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
scraper = "0.18"
config = "0.13"
parking_lot = "0.12"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4.39"
async-trait = "0.1"
sanitize-filename = "0.5"

rig-core = { workspace = true }
rig-sqlite = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }

