[package]
name = "zoey"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
zoey-core = { path = "../zoey-core" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive", "env"] }
dotenv = "0.15"
toml = "0.8"

sqlite-vec = "0.1"
tokio-rusqlite = { workspace = true }
chrono = "0.4"
twitter-v2 = "0.1.8"
mongodb = "3.1.1"
serde_json = "1.0"
tracing = "0.1"

rig-core = { workspace = true }
rig-sqlite = { workspace = true }